--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,10 +8,10 @@
 }
 
 .background {
-  background-image: url('../images/emoji-wallpaper.jpg');
+  background-image: url('../images/background.png');
   height: 100vh;
   width: 100vw;
-  filter: blur(2px);
+  filter: blur(1px);
   opacity: 0.8;
 }
 
@@ -108,4 +108,33 @@ text {
 
 svg{
   padding-top: 23px;
+}
+
+.social_network {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 16px;
+}
+
+.social_network > img{
+  width: 40px;
+  height: 40px;
+}
+
+.parametre{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+}
+
+.parametre > img{
+  width: 60px;
+  height: 60px;
 }
