--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -30,21 +30,6 @@
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100vh; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
 /* Modal Content */
 .modal-content {
     background-color: #fefefe;
@@ -108,4 +93,32 @@ text {
 
 svg{
   padding-top: 23px;
+}
+
+#player-choice{
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+#bot-choice{
+  width: 100vw;
+  height: 50vh;
+}
+
+.myBtn>img{
+  width: 28vw;
+}
+
+#myModal{
+  display: none;
+  height: 100vh;
+  position: absolute;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
